# OpencvFace

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jesen/opencvface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jesen/opencvface/: MainActivity.kt  OpencvHelp.kt
app/src/main/java/com/jesen/opencvface/utils/: BitmapUtil.kt  Camera2Helper.kt  CameraHelper.java  FileUtil.kt  Outil.kt
app/src/main/res/drawable/: ic_change.xml  ic_settings.xml  ic_start.xml  ic_stop.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/jesen/opencvface/: ExampleUnitTest.kt
cameratool/: build.gradle
cameratool/src/androidTest/java/com/jesen/cameratool/: ExampleInstrumentedTest.kt
cameratool/src/main/: AndroidManifest.xml
cameratool/src/main/java/com/jesen/cameratool/: Camera2Helper.kt  CameraCharacteristicsExts.kt  GlobaApp.java  MainActivity.kt
cameratool/src/main/res/drawable/: ic_baseline_photo_camera_24.xml  ic_change_camera.xml  ic_thumb_image_24.xml
cameratool/src/main/res/layout/: activity_main.xml
cameratool/src/main/res/menu/: setting_menu.xml
cameratool/src/main/res/values/: strings.xml  themes.xml
cameratool/src/main/res/xml/: file_paths.xml
cameratool/src/test/java/com/jesen/cameratool/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
